force-app/main/default/objects/Application_Timeline__c/Application_Timeline__c.object-meta.xml
<CustomObject>
    <label>Application Timeline</label>
    <nameField>
        <label>Application Timeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>