force-app/main/default/objects/Application_Timeline__c/fields/ApplicationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationEndDate__c</fullName>
    <label>Application End Date</label>
    <type>Date</type>
</CustomField>