force-app/main/default/objects/Application_Timeline__c/fields/ApplicationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStartDate__c</fullName>
    <label>Application Start Date</label>
    <type>Date</type>
</CustomField>