force-app/main/default/objects/Application_Timeline__c/fields/ProjectPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>ProjectPeriodEnd__c</fullName>
    <label>Project Period End</label>
    <type>Date</type>
</CustomField>