force-app/main/default/objects/Application_Timeline__c/fields/ProjectPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>ProjectPeriodStart__c</fullName>
    <label>Project Period Start</label>
    <type>Date</type>
</CustomField>